# notebooks

./: .gitignore  CONTRIBUTING.md  README.md  apt.txt  execute_notebooks.py  pyproject.toml  pyproject.toml.bak  requirements.txt
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  enhancement.md  new_notebook.md
.github/workflows/: execute_notebooks.py  test.yaml  test_notebooks.py
Communications/customer-churn/: main.ipynb
Technology/Reddit/: main.ipynb
finance/001_collateral_shortfall_monitoring/: collateral-management-demo.ipynb  requirements.txt
finance/002_pnl_explained/: Sensitivities PnL Explained.ipynb
finance/atoti-sbm/: configuration.yaml  main - Huifang.ipynb  main.ipynb
finance/collateral-shortfall-monitoring/: main.ipynb
finance/model-calibration/: business_calendar.csv  main.ipynb  positions_snapshot.csv  stock_price_returns.csv
finance/pnl-explained/: main.ipynb  requirements.txt
finance/real-time-risk/: main.ipynb  market_data.csv  pricing_engine_emulator.py  risk_data.csv  risk_data_previous_cob.csv  stock_price_tick_data.csv  trade_attributes.csv
finance/sa-ccr/: main.ipynb
finance/sbm/: configuration.yaml  main.ipynb
finance/stressed-var-calibration/: main.ipynb
finance/value-at-risk/: main.ipynb
fun/reddit/: main.ipynb
fun/twitter/: 01_tweets_mining.ipynb  01_twitter_data_scraping.ipynb  02_sentiment.ipynb  03_coingecko_prices.ipynb  03_cryptocurrency_mining.ipynb  main.ipynb
fun/var-impact-in-premier-league/: main.ipynb
guides/topcount/: atoti.ipynb  main.ipynb  pandas.ipynb
notebooks/: README.md
notebooks/01-use-cases/: README.md
notebooks/01-use-cases/finance/risk-management/operational-risk/credit-card-fraud-detection/atoti-pycaret/: README.md  pyproject.toml
notebooks/01-use-cases/finance/risk-management/operational-risk/credit-card-fraud-detection/atoti-pycaret/automl/: prediction.py
notebooks/02-technical-tutorials/: README.md
notebooks/Insurance-case/: main.ipynb  model_results_extra_tree_OH.csv  model_results_nn.csv  model_results_pls_bgm.csv  model_results_pls_xgb.csv  model_results_rf_glmm.csv  model_results_xgb.csv  model_results_xgb_OH.csv
notebooks/Subpopulation-Analysis/: Article_best_model.ipynb  main.ipynb
notebooks/airline-industry/: README.md  main.ipynb
notebooks/auto-cube/: main-advanced.ipynb  main.ipynb
notebooks/baseball/: README.md  main.ipynb
notebooks/bike-sales/: main.ipynb
notebooks/burritos/: README.md  main.ipynb
notebooks/ca-solar/: 01-nrel-data-sourcing.ipynb  01-nrel-data-sourcing.py  02-fire-data-sourcing.ipynb  02-fire-data-sourcing.py  main.ipynb
notebooks/collateral-shortfall-forecast/: READ-ME.md  README.md
notebooks/collateral-shortfall-monitoring/: main.ipynb
notebooks/credit-card-fraud-detection/: 01-Synthetic-data-generation.ipynb  02_AutoML_PyCaret.ipynb  03-AutoML-PyCaret-classification.ipynb  README.md  main.ipynb
notebooks/cumulative-pnl/: main.ipynb
notebooks/currency-conv-with-weighted-ave/: main.ipynb
notebooks/currency-conversion/: main.ipynb
notebooks/customer-churn/: 0_prepare_data.ipynb  1_create_models.ipynb  README.md  main.ipynb
notebooks/customer360/: 01-Dataupload-to-Vertica.ipynb  03-main-csv.ipynb
notebooks/digital-marketing-dashboard/: main.ipynb
notebooks/drug-efficacy/: main.ipynb
notebooks/excel-and-atoti/: main.ipynb
notebooks/food-processing/: main-backup 0.6.ipynb  main-backup.ipynb  main.ipynb
notebooks/formula-one/: main.ipynb
notebooks/french-presidential-election/: main.ipynb
notebooks/geopricing/: main.ipynb
notebooks/global-covid-data/: world_coordinates.csv
notebooks/hr-dashboard/: main.ipynb
notebooks/ifrs9/: configuration.yaml  data-generation.ipynb  main.ipynb
notebooks/influencers-analysis/: README.md
notebooks/introductory-tutorial/: main.ipynb
notebooks/iot-load/: main.ipynb
notebooks/multidimensional-analysis/: main.ipynb
notebooks/o11y/: o11y.ipynb
notebooks/object-detection/: main.ipynb  main_demo.ipynb  main_generate_csv.ipynb
notebooks/pnl-explained/: main.ipynb
notebooks/pokemon/: README.md  main.ipynb
notebooks/price-elasticity/: main.ipynb
notebooks/pricing-simulations-around-product-classes/: main.ipynb
notebooks/real-time-risk/: main.ipynb  pricing_engine_emulator.py
notebooks/reddit/: main.ipynb
notebooks/rollup-hierarchies/: main.ipynb
notebooks/rwa-density/: main.ipynb  sample_data.csv  sample_data_generator.py
notebooks/sa-ccr/: main.ipynb
notebooks/sales-commission/: main.ipynb
notebooks/sales_cube/: DataScrapping.ipynb  Data_gen.ipynb  IEA_webscraping_code.ipynb  Sales_Cube_backup.ipynb  Untitled.ipynb  main.ipynb
notebooks/sbm/: configuration.yaml  main.ipynb
notebooks/security-implementation/: 01-Basic-authentication.ipynb  02-OIDC-Auth0.ipynb  03-OIDC-Google.ipynb  04-LDAP.ipynb  README.md  main.ipynb
notebooks/stressed-var-calibration/: main.ipynb
notebooks/sub-population-analysis/: _utils.py  main.ipynb
notebooks/topcount/: README.md  atoti.ipynb  pandas.ipynb
notebooks/twitter/: 01_tweets_mining.ipynb  02_sentiment.ipynb  03_cryptocurrency_mining.ipynb  README.md
notebooks/value-at-risk/: main.ipynb
notebooks/var-benchmark/: data_generator.ipynb  main.ipynb
notebooks/var-impact-in-premier-league/: main.ipynb
notebooks/veteran-emp/: main.ipynb  veteran-data.csv
notebooks/weighted-averages/: main.ipynb
notebooks/wildfire-prediction/: READ-ME.md
notebooks/wine-analytics/: main-full.ipynb  main.ipynb
notebooks/world-population/: 2021_population.csv  2021_population_cleaned.csv  Untitled.ipynb  country_gender.csv  main-Copy1.ipynb  main.ipynb  main1.ipynb  world_coordinates.csv
notebooks/xva/: main.ipynb
retail-pricing/: Analysis.ipynb  main.ipynb
retail/agroalimentaire/: main.ipynb  (+5 more)
tests/: execute_notebooks.py
utils/: notebook_utils.ipynb  notebook_utils.py
(+739 files in other folders)
