[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "Gallery of atoti notebooks"
authors = ["atoti <contact@atoti.io>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9.7 || >3.9.7,<3.11"
atoti = {extras = ["jupyterlab", "kafka", "aws", "azure", "gcp"], version = "^0.7.0"}
wget = "^3.2"
treelib = "^1.6.1"
mxnet = "1.6.0"
matplotlib = "^3.4.2"
gluonts = "^0.7.5"
folium = "^0.12.1"
seaborn = "^0.11.1"
sklearn = "^0.0"
praw = "^7.3.0"
spacy = "2.3.7"
pandas-profiling = "3.2.0"
statsmodels = "0.13.2"
imblearn = "^0.0"
boto3 = "^1.17.102"
xlrd = "^2.0.1"
ipywidgets = "^7.6.3"
widgetsnbextension = "^3.5.1"
openpyxl = "^3.0.7"
fsspec = "^2021.10.0"
s3fs = "^2021.10.0"
sqlalchemy = "^1.4.26"
sqlalchemy-vertica-python = "0.5.10"
haversine = "2.5.1"
watchdog = "^2.1.6"
QuantLib = "^1.25"
kafka-python = "^2.0.2"
xgboost = "^1.5.2"
natsort = "8.1.0"
tabulate = "0.8.9"
orjson = "^3.7.12"
lxml = "^4.8.0"
html5lib = "^1.1"
yfinance = "^0.1.70"
pyopls = "^20.3.post1"
nltk = "^3.6.2"
textblob = "^0.15.3"
llvmlite = "0.38.0"
tsfresh = "^0.19.0"

[tool.poetry.dev-dependencies]
black-nb = "^0.7"
black = { extras = ["jupyter"], version = "*" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
