[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Yeo Hui Fang <hfy@activeviam.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
pycaret = "2.3.4"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
